--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,11 +17,32 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Helvetica";
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+@font-face {
+  font-family: "Helvetica";
+  src: url("/font/Helvetica.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "HelveticaBold";
+
+  src: url("/font/Helvetica-Bold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "HelveticaCondense";
+  src: url("/font/helvetica_condensed.ttf") format("truetype");
+
+  font-weight: normal;
+  font-style: normal;
 }
